@@ -1,5 +1,5 @@
 .\"
-.\" Sccsid @(#)ptx.1b	1.5 (gritter) 11/6/05
+.\" Sccsid @(#)ptx.1	1.6 (gritter) 2/2/07
 .\" Parts taken from ptx(1), Unix 7th edition:
 .\" Copyright(C) Caldera International Inc. 2001-2002. All rights reserved.
 .\"
@@ -32,9 +32,9 @@
 .\" WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE
 .\" OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE,
 .\" EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-.TH PTX 1B "11/6/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.TH PTX 1 "2/2/07" "Heirloom Documentation Tools" "User Commands"
 .SH NAME
-ptx \- (BSD) permuted index
+ptx \- permuted index
 .SH SYNOPSIS
 .HP
 .ad l
