@@ -1,8 +1,8 @@
 .\"
-.\" Sccsid @(#)otfdump.1b	1.3 (gritter) 10/2/05
-.TH OTFDUMP 1B "10/2/05" "Heirloom Documentation Tools" "BSD System Compatibility"
+.\" Sccsid @(#)otfdump.1	1.4 (gritter) 2/2/07
+.TH OTFDUMP 1 "2/2/07" "Heirloom Documentation Tools" "User Commands"
 .SH NAME
-otfdump \- (BSD) dump the contents of OpenType font files
+otfdump \- dump the contents of OpenType font files
 .SH SYNOPSIS
 .HP
 .ad l
